Fix T46333: Particle Info Node broken w/ BI

Patch from @a.romanov

This also fixes multiple particle systems - which never worked.